// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export type T = string;

module.exports = 0;

=====================================output=====================================
// @flow

export type T = string;

module.exports = 0;

================================================================================
`;

exports[`test2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

(require('./test1'): string);
import type { T } from './test1';
export type S = T;

=====================================output=====================================
// @flow

(require("./test1"): string);
import type { T } from "./test1";
export type S = T;

================================================================================
`;

exports[`test3.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import type { S } from './test2';

(0: string);

export type R = S;

=====================================output=====================================
// @flow

import type { S } from "./test2";

(0: string);

export type R = S;

================================================================================
`;
